# unlockr

./: .clang-format  .gitignore  README.md  meson.build  meson_options.txt  meson_post_install.py  run_program_debug.ps1  run_program_debug.sh  windows_portable.py
build-aux/flatpak/: com.github.jkotra.unlockr.json  com.github.jkotra.unlockr.yml
data/: com.github.jkotra.unlockr.desktop  com.github.jkotra.unlockr.desktop.in  com.github.jkotra.unlockr.gschema.xml  com.github.jkotra.unlockr.metainfo.xml  com.github.jkotra.unlockr.metainfo.xml.in  meson.build  unlockr.gresource.xml
data/css/: main.css
data/icons/: favicon.rc
include/: about.h  details.h  libunlockr.h  main.h  meson.build  process.h  utils.h
po/: LINGUAS  POTFILES  README.md  ar.po  de.po  en.po  es.po  hr.po  it.po  meson.build  nl.po  pt_BR.po  te.po  tr.po  unlockr.pot
src/: about.c  main.c  meson.build  process.c  utils.c
subprojects/libunlockr/: libunlockr.cpp  meson.build
